Factor out titlebar click actions

So they can be made configurable.

https://bugzilla.gnome.org/show_bug.cgi?id=729782